[package]
name = "hbbs"
version = "1.1.16"
authors = ["rustdesk <info@rustdesk.com>"]
edition = "2024"
build = "build.rs"
default-run = "hbbs"

[[bin]]
name = "hbbr"
path = "src/hbbr.rs"

[[bin]]
name = "rustdesk-utils"
path = "src/utils.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hbb_common = { path = "libs/hbb_common" }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.5"
clap = { version = "4.6.1", features = ["string"] }
rust-ini = "0.21.3"
minreq = { version = "3.0.0", features = ["punycode"] }
machine-uid = "0.6.0"
mac_address = "1.1.8"
whoami = "2.1.2"
base64 = "0.22.1"
axum = "0.8.9"
sqlx = { version = "0.9.0", features = [ "runtime-tokio", "tls-rustls", "sqlite", "macros", "chrono", "json" ] }
deadpool = "0.13.0"
async-trait = "0.1"
async-speed-limit = { git = "https://github.com/open-trade/async-speed-limit" }
uuid = { version = "1.23.5", features = ["v4"] }
bcrypt = "0.19.2"
chrono = "0.4"
jsonwebtoken = "10.4.0"
headers = "0.4.1"
once_cell = "1.21"
sodiumoxide = "0.2"
tokio-tungstenite = "0.30.0"
tungstenite = "0.30.0"
regex = "1.13"
tower-http = { version = "0.7.0", features = ["fs", "trace", "cors"] }
http = "1.4.2"
flexi_logger = { version = "0.31.9", features = ["async", "dont_minimize_extra_stacks"] }
ipnetwork = "0.21.1"
local-ip-address = "0.6.13"
dns-lookup = "3.0.1"
ping = "0.9.0"
flate2 = "1.1"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
# https://github.com/rustdesk/rustdesk-server-pro/issues/189, using native-tls for better tls support
reqwest = { git = "https://github.com/rustdesk-org/reqwest", features = ["blocking", "socks", "json", "native-tls", "gzip"], default-features=false }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
reqwest = { git = "https://github.com/rustdesk-org/reqwest", features = ["blocking", "socks", "json", "rustls-tls", "rustls-tls-native-roots", "gzip"], default-features=false }

[build-dependencies]
hbb_common = { path = "libs/hbb_common" }

[workspace]
members = ["libs/hbb_common"]
exclude = ["ui"]

#https://github.com/johnthagen/min-sized-rust
#https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
#opt-level = 'z' # only have smaller size after strip # Default is 3, better performance
#rpath = true # Not needed
